--- a/build.gradle
+++ b/build.gradle
@@ -10,14 +10,22 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.seleniumhq.selenium:selenium-java:4.0.0-rc-1'
-    implementation 'io.cucumber:cucumber-java:6.11.0'
-    implementation 'io.github.prashant-ramcharan:courgette-jvm:5.12.0'
-
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
+
+    // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
+    implementation 'org.seleniumhq.selenium:selenium-java:4.0.0-rc-1'
+    // https://mvnrepository.com/artifact/io.cucumber/cucumber-java
+    implementation 'io.cucumber:cucumber-java:6.11.0'
+
+    // https://mvnrepository.com/artifact/io.cucumber/cucumber-junit
     testImplementation 'io.cucumber:cucumber-junit:6.11.0'
+
+    // https://mvnrepository.com/artifact/org.hamcrest/hamcrest
     testImplementation 'org.hamcrest:hamcrest:2.2'
+
+    // https://mvnrepository.com/artifact/io.github.prashant-ramcharan/courgette-jvm
+    implementation 'io.github.prashant-ramcharan:courgette-jvm:5.12.0'
 
 }
 
